코드 최적화 및 수정